<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#EBEBEB"
    >

    <View
        android:id="@+id/v_line1"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#EBEBEB" />

    <RelativeLayout
        android:id="@+id/personal_layout_relayout1"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@id/v_line1"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical" 
            android:background="@drawable/arrow_right3"
            />
        
         
        <TextView
            android:id="@+id/personal_layout_head"
            android:layout_width="70dp"
            android:layout_height="44dp"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/head"
            android:textSize="18sp" />

        <edu.ztone.timenote.util.CircularImage
            android:id="@+id/layout_imagetx"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/img"
            android:scaleType="fitXY" />

    </RelativeLayout>

    <View
        android:id="@+id/v_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/personal_layout_relayout1"
        android:background="#EBEBEB" />

    <RelativeLayout
        android:id="@+id/personal_layout_relayout2"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@id/v_line2"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img2"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical" 
            android:background="@drawable/arrow_right3"
            />
         
        <TextView
            android:id="@+id/personal_layout_nickname"
            android:layout_width="70dp"
            android:layout_height="44dp"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/nickname"
            android:textSize="18sp" />

        <TextView
           android:id="@+id/TV_nickname"
            android:layout_width="60dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/img2"
            android:gravity="center_vertical"
            android:text="@string/none"
            android:textSize="12sp" 
           />

    </RelativeLayout>

    <View
        android:id="@+id/v_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/personal_layout_relayout2"
        android:background="#EBEBEB" />

    <RelativeLayout
        android:id="@+id/personal_layout_relayout3"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@id/v_line3"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/personal_layout_account"
            android:layout_width="70dp"
            android:layout_height="44dp"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/account"
            android:textSize="18sp" />

        <ImageView 
            android:id="@+id/img3"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical" 
              android:background="@drawable/arrow_right3"/>
        <TextView
            android:id="@+id/TV_account"
            android:layout_width="60dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/img3"
            android:gravity="center_vertical"
            android:text="@string/none"
            android:textSize="12sp" 
           />
    </RelativeLayout>

    <View
        android:id="@+id/v_line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/personal_layout_relayout3"
        android:background="#EBEBEB" />

    <RelativeLayout
        android:id="@+id/personal_layout_relayout4"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@id/v_line4"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/personal_layout_gender"
            android:layout_width="70dp"
            android:layout_height="44dp"
            android:layout_marginLeft="15dip"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/gender"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical" 
              android:background="@drawable/arrow_right3"/>
        <TextView
            android:id="@+id/TV_sex"
            android:layout_width="60dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/img4"
            android:gravity="center_vertical"
            android:text="@string/none"
            android:textSize="12sp" 
           />
    </RelativeLayout>

    <View
        android:id="@+id/v_line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/personal_layout_relayout4"
        android:background="#EBEBEB" />

    <RelativeLayout
        android:id="@+id/personal_layout_relayout5"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@id/v_line5"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/personal_layout_birthday"
            android:layout_width="70dp"
            android:layout_height="44dp"
            android:layout_marginLeft="15dip"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/birthday"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical" 
              android:background="@drawable/arrow_right3"/>

         <TextView
             android:id="@+id/TV_birthday"
             android:layout_width="60dp"
             android:layout_height="44dp"
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/img5"
             android:gravity="center_vertical"    
             android:text="@string/none"
             android:textSize="12sp" 
             />

    </RelativeLayout>

    <View
        android:id="@+id/v_line6"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_below="@id/personal_layout_relayout5"
        android:background="#EBEBEB" />

    <Button
        android:id="@+id/ps_bt_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/v_line6"
        android:layout_marginTop="56dp"
        android:background="#FFFFFF"
        android:text="@string/logout"
        android:textColor="#FF3030" />

</RelativeLayout>